--- a/style.css
+++ b/style.css
@@ -1,5 +1,71 @@
+html{
+    min-height: 100vh;
+    background: aquamarine;
+}
+
+body    {
+    display: grid;
+    grid-template-columns: 30% 40% 30%;
+    position: relative;
+    margin: 5px;
+    height: 94vh;
+    box-sizing: border-box;
+}
+
+#mid{
+    display: inline-table;
+    text-align: center;
+    position: relative;
+    transform: translateY(-1.7vw);
+}
+
+#subrayado{
+    display: grid;
+    position: relative;
+    transform: translateY(1.8);
+    height: 100px;
+    
+}
+
+#leftimg {
+    height: 150px;
+}
+
+#midimg{
+    height: 150px;
+}
+
 #title {
     font-family: 'Handjet', cursive;
-    font-size: 150px;
-    color: aquamarine;
+    font-size: 100px;
+    color: deeppink ;
+}
+
+#midmarco {
+    height: 155px;
+}
+
+#leftmarco{
+    height: 155px;
+}
+#rightmarco{
+    height: 155px;
+}
+
+#piso{
+    padding: 1rem 2rem;
+    background-color: deeppink;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    font-family: 'Handjet';
+}
+
+#pepito{
+    color: beige;
+}
+
+#va{
+    background-color: deeppink;
 }
