--- a/style.css
+++ b/style.css
@@ -12,60 +12,132 @@ body    {
     box-sizing: border-box;
 }
 
-#mid{
-    display: inline-table;
-    text-align: center;
-    position: relative;
-    transform: translateY(-1.7vw);
-}
-
-#subrayado{
-    display: grid;
-    position: relative;
-    transform: translateY(1.8);
-    height: 100px;
-    
-}
-
-#leftimg {
-    height: 150px;
-}
-
-#midimg{
-    height: 150px;
-}
-
 #title {
     font-family: 'Handjet', cursive;
     font-size: 100px;
     color: deeppink ;
 }
 
-#midmarco {
-    height: 155px;
+#left{
+    display: inline-table;
+    text-align: center;
+    position: relative;
+    background-color: beige;
+    margin: 1px;
+    border-radius: 2px;
+    
+}
+
+#mid{
+    display: inline-table;
+    text-align: center;
+    position: relative;
+    bottom: 10;
+    transform: translateY(-1.7vw);
+}
+
+#right{
+    display: inline-table;
+    text-align: center;
+    position: relative;
+    
+}
+#subrayado{
+    position: absolute;
+    align-items: center;
+    display: grid;
+    height: 500px;
+    width: 700px;
+    top: 50px;  
+}
+
+#leftimg {
+    position: relative;
+    height: 200px;
+    width: 300px;
+    top: 21px;
+    z-index: 1;
+}
+
+#midimg{
+    position: relative;
+    height: 200px;
+    width: 300px;
+    top: 21px;
+    z-index: -1;
+}
+
+#rightimg{
+    position: relative;
+    height: 200px;
+    width: 300px;
+    top: 21px;
+    z-index: -1;
 }
 
 #leftmarco{
-    height: 155px;
-}
-#rightmarco{
-    height: 155px;
+    position: absolute;
+    height: 252px;
+    width: 340px;
+    top: -10px;
+    left: 105px;
+    z-index: 2;
 }
 
-#piso{
+#midmarco {
+    position: absolute;
+    height: 252px;
+    width: 340px;
+    top: 350px;
+    left: 195px;
+    z-index: 1;
+}
+
+#rightmarco{
+    position: absolute;
+    height: 252px;
+    width: 340px;
+    top: -10px;
+    left: 105px;
+    z-index: 1;
+}
+
+#leftdescription{
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+    position: relative;
+
+}
+
+#middescription{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    position: relative;
+}
+
+#rightdescription{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    position: relative;
+}
+
+.container{
+    margin: 0;
+}
+
+section article{
+    background-color: beige;
+    margin: 15px;
+    border-radius: 10px;
+}
+
+footer{
     padding: 1rem 2rem;
     background-color: deeppink;
     position: absolute;
-    bottom: 0;
+    bottom: -75px;
     width: 100%;
-    height: 50px;
-    font-family: 'Handjet';
+    height: 100px;
+        font-family: 'Handjet';
 }
-
+ 
 #pepito{
     color: beige;
-}
-
-#va{
-    background-color: deeppink;
 }
