--- a/style.css
+++ b/style.css
@@ -1,136 +1,3 @@
-html{
-    min-height: 10vh;
-    background: aquamarine;
+h1{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
-body    {
-    display: flex;
-    grid-template-columns: 30% 40% 30%;
-    position: relative;
-    height: 110vh;
-    box-sizing: border-box;
-    min-height: 100vh;
-    flex-direction: row;
-}
-
-#title {
-    font-family: 'Handjet', cursive;
-    font-size: 90px;
-    color: deeppink ;
-}
-
-#left{
-    display: inline-table;
-    text-align: center;
-    border: 12px;
-    padding: 40px;
-    background-color: beige;
-    margin: 90px;
-    border-radius: 2px;
-    max-height: 90vh;
-    
-}
-
-#midc{
-    text-align: center;
-    transform: translateY(1.9vw);
-}
-
-#mid{
-
-    text-align: center;
-    position: absolute;
-    background-color: beige;
-    top: 400px;
-}
-
-#right{
-    display: inline-table;
-    text-align: center;
-    padding: 40px;
-    background-color: beige;
-    margin: 90px;
-    border-radius: 2px;
-    max-height: 90vh;
-    
-}
-#subrayado{
-position: relative;
-    justify-content: center;
-    height: 500px;
-    width: 700px;
-    top: -300px;  
-}
-
-#leftimg {
-    justify-content: center;
-    height: 200px;
-    width: 300px;
-    top: 21px;
-    z-index: 1;
-}
-
-#midimg{
-    height: 200px;
-    width: 300px;
-    top: 21px;
-    z-index: 1;
-}
-
-#rightimg{
-    height: 200px;
-    width: 300px;
-    top: 21px;
-    z-index: 1;
-}
-
-#leftmarco{
-    justify-content: center;
-    height: 252px;
-    width: 340px;
-    top: 30px;
-    z-index: 2;
-}
-
-#midmarco {
-    height: 252px;
-    width: 340px;
-    top: 30px;
-    left: 175px;
-    z-index: 2;
-}
-
-#rightmarco{
-    height: 252px;
-    width: 340px;
-    top: 30px;
-    left: 20px;
-    z-index: 2;
-}
-
-#leftdescription{
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
-
-
-}
-
-#middescription{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-#rightdescription{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-}
-
-footer{
-    color: darkorchid;
-    background-color: darkseagreen;
-    font-family: 'Handjet' , cursive;
-    padding: 1em 0;
-    height: 5%;
-    width: 100%;
-    bottom: 0;
-    margin-top:auto;
-}
-
